--- a/client/src/styles/homebody.css
+++ b/client/src/styles/homebody.css
@@ -86,3 +86,28 @@ a {
     color:#4ab6b4;
   }
 }
+.link-column{
+  display:flex;
+  flex-direction: column;
+  margin-top:20px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  padding-bottom:20px;
+}
+
+button.pagination {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  text-decoration: none;
+  outline: none;
+  margin:5px;
+}
+
+button.pagination:hover {
+  background-color: #4ab6b4;
+  color: white;
+}
+
