--- a/client/src/styles/homebody.css
+++ b/client/src/styles/homebody.css
@@ -111,3 +111,25 @@ button.pagination:hover {
   color: white;
 }
 
+body{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.signupButton {
+  margin-top: 2em;
+  padding:0.2em;
+  border: none;
+  background-color: #4ab6b4;
+  color: #fff;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+  letter-spacing: 1px;
+  border-radius: 24px;
+  border:#4ab6b4 solid 1px;
+  width:225px;
+}
+
+.signupButton:hover {
+  color:#4ab6b4;
+  background-color: white;
+  border-radius: 24px;
+}
